# pinnacle

./: .env.example  .gitignore  APPOINTMENT_QUOTA_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  QUOTA_QUICK_REFERENCE.md  README.md  config.py  conftest.py  crons.py  main.py  pyproject.toml  requirements.txt  ruff.toml  scheduler.py
alembic/: README  env.py  initial.sql
cli/: README.md  __init__.py  corporate_code_tester.py  service_group_tester.py  service_tester.py
documentation/: 250423_private_patient_teleconsult_routing.md  CRITICAL_PRODUCTION_WARNING.md  DEPLOYMENT_QUICK_REFERENCE.md  IMPLEMENTATION_SUMMARY.md  appointment_quota_controls.md  sgimed_clinical_measurements_implementation.md  sgimed_measurements_quick_reference.md  telemed_onhold_payment_flows.md  telemed_onhold_payment_plan.md  telemed_onhold_payment_summary.md
models/: __init__.py  appointment.py  appointment_request.py  backend.py  corporate.py  delivery.py  document.py  email_template.py  model_enums.py  patient.py  payments.py  pinnacle.py  redis_models.py  service.py  sgimed.py  specialisation.py  specialist.py  teleconsult.py  utils.py  walkin.py
repository/: README.md  appointment.py  family_nok.py  health_report_repository.py  payments.py  teleconsult.py
routers/: admin_health_report_router.py  appointment_request.py  email_template.py  realtime.py  render.py  specialisation.py  specialist.py  time.py
scheduler_actions/: appointment_updates.py  common.py  delivery_updates.py  sgimed_appointment_updates.py  sgimed_health_report_updates.py  sgimed_sync.py  sgimed_updates.py  (+1 more)
(+178 files in other folders)
